--- a/Default.cshtml
+++ b/Default.cshtml
@@ -7,7 +7,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Tijuana >Net</title>
+        <title>Tijuana .Net</title>
         <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />                
         <link href="css/site.css" rel="stylesheet">
     </head>
