--- a/Shared/_Layout.cshtml
+++ b/Shared/_Layout.cshtml
@@ -13,15 +13,18 @@
                     <a href="http://twitter.com/tijuananet">Siguenos en twitter</a>
                     <a href="https://www.facebook.com/groups/31167573201/">Grupo en Facebook</a>                    
                 </nav>            
-                <img src="images/logo.jpg" alt="Tijuana .Net" class="logo">            
+                <img src="~/images/logo.jpg" alt="Tijuana .Net" class="logo">            
             </header>
             <nav class="main-navigation">
-                <a href="#">Inicio</a>
+                <a href="~/">Inicio</a>
+                <a href="~/news">Noticias</a>
                 <a href="#">Eventos</a>
                 <a href="#">Boletines</a>                
                 <a href="#">Blogs</a>
                 <a href="http://dev3cast.com">Podcast</a>
             </nav>
+            
+
             @RenderBody()
         </div>        
     </body>
