--- a/news/default.cshtml
+++ b/news/default.cshtml
@@ -6,7 +6,7 @@
 <h1>Noticias</h1>
 @foreach(var item in news)
 {   <div>
-    <h2><a href="/details/@item.id" >@item.title</a></h2>
+    <h2><a href="~/news/details/@item.id" >@item.title</a></h2>
     <p>
         @item.summary
     </p>
