--- a/news/details.cshtml
+++ b/news/details.cshtml
@@ -5,7 +5,7 @@
 
 <h1>@news.title</h1>
 
-<img src="@news.imageUrl" />
+<img alt="@news.title" src="@news.imageUrl" />
 
 <p>@news.description</p>
 
