--- a/events/details.cshtml
+++ b/events/details.cshtml
@@ -6,7 +6,6 @@
 
 <h1>@item.title</h1>
 
-<img src="@item.topImageUrl" />
+<img alt="@item.title" src="@item.topImageUrl" />
 
 <p>@item.description</p>
-
