event page ended

--- a/Shared/_Layout.cshtml
+++ b/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
             <nav class="main-navigation">
                 <a href="~/">Inicio</a>
                 <a href="~/news">Noticias</a>
-                <a href="#">Eventos</a>
+                <a href="~/events">Eventos</a>
                 <a href="#">Boletines</a>                
                 <a href="#">Blogs</a>
                 <a href="http://dev3cast.com">Podcast</a>
