--- a/events/default.cshtml
+++ b/events/default.cshtml
@@ -8,8 +8,11 @@
 
 @foreach(var item in events)
 {
-    <div>
-    <h2><a href="~/events/details/@item.id">@item.title</a></h2>
+    <div class="list-item">
+        <img class="icon" src="@item.iconUrl" alt="#" />
+        <div class="info">
+        <h2><a href="~/events/details/@item.id">@item.title</a></h2>
         <p>@item.summary</p>
+        </div>
     </div>
 }
