--- a/Shared/_Layout.cshtml
+++ b/Shared/_Layout.cshtml
@@ -26,6 +26,8 @@
             
 
             @RenderBody()
+            <script src="~/js/jquery-1.9.1.min.js"></script>
+            @RenderSection("scripts", required:false);
         </div>        
     </body>
 </html>
